--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "sourceMap": true,
-    "outDir":"dist",
-    "watch": true
+    "outDir":"dist"
   },
   "exclude": [
     "node_modules"
